[tool.poetry]
name = "jupyter-notebook"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "jupyter_notebook"}]

[tool.poetry.dependencies]
python = "^3.12"
pip = "24.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
